compiler/tests/en/errors/pure_ref_param.salam
// EXPECT: E012
pure func bump(x &: int) : int:
    ret x + 1
end

func main:
    mut n := 1
    println(bump(&(n)))
end
